nullaway_error_64e95c7d-85dc-4b76-a61e-15b35ab91fdf.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/EntitySpawner.java:185: error: [NullAway] dereferenced expression spawnpoint is @Nullable
    if (spawnpoint.getEnvironment() == null || !spawnpoint.getEnvironment().isLoaded()) {
                  ^
    (see http://t.uber.com/nullaway )
